align content container and to be correct height

--- a/apps/hsbc/src/app/home/home.component.scss
+++ b/apps/hsbc/src/app/home/home.component.scss
@@ -24,6 +24,9 @@ h1 {
 
 .tab-group {
   margin: 0 -1.2rem;
+  height: calc(100% - 6rem);
+  position: relative;
+  top: 6rem;
 }
 
 .tab-group__content {
